Adjusted batch upload table/modal a bit - scrollbars always visible to prevent layout jumping

--- a/src/app/gagestats/batch-upload/batch-upload.component.scss
+++ b/src/app/gagestats/batch-upload/batch-upload.component.scss
@@ -4,6 +4,9 @@
 		max-width: 600px;
 	}
 }
+.batch-scrollbars{
+	overflow-y: scroll !important;
+}
 
 // Upload buttons
 .upload-type{
